hw05/test/zm-putarray-error1.fmj
public int main() {
    int[] a;
    int n = 2;
    a = new int[2];
    putarray(2, a);
    putarray(a, a); // error
    return n;
}
